--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: d8nieldonaldson
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: UI/UX development
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/158966?v=3&s=96
 
 #
 # Flags below are optional
